--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: mauricer
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Install BEAST2 packages from R
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Richel J.C. Bilderbeek
+Maintainer: Richel J.C. Bilderbeek <richel@richelbilderbeek.nl>
+Description: BEAST2 is a popular Bayesian phylogenetic tool with
+    a suite of GUI tools proving a user-friendly starting point. 
+    The babette package allows to call BEAST2 from R. This package,
+    mauricer, allows to install BEAST2 packages from R.
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
