--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,11 @@ License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
-Suggests: testthat,
+Imports:
+    beastier,
+    stringr
+Suggests: 
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
