--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,13 @@ Title: Install BEAST2 packages from R
 Version: 1.2
 Author: Richel J.C. Bilderbeek
 Maintainer: Richel J.C. Bilderbeek <richel@richelbilderbeek.nl>
-Description: BEAST2 is a popular Bayesian phylogenetic tool with
-    a suite of GUI tools proving a user-friendly starting point. 
-    The babette package allows to call BEAST2 from R. This package,
-    mauricer, allows to install BEAST2 packages from R.
+Description: 'BEAST2' (<http://www.beast2.org>) is a widely used
+  Bayesian phylogenetic tool, that uses DNA/RNA/protein data
+  and many model priors to create a posterior of jointly estimated 
+  phylogenies and parameters.
+  'BEAST2' is commonly accompanied by 'BEAUti 2' (<http://www.beast2.org>),
+  which, among others, allows one to install BEAST2 package. 
+  The mauricer package allows to install BEAST2 packages from R.
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
