Test for temporary local files being created, test build for CRAN

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,11 @@ before_script:
   - if [ -f ".lintr" ]; then echo "Do use Hadley Wickham's style guide"; exit 1; fi
   # proselint
   - sudo pip install proselint
+  - # No local files created
+  - egrep -oR "\"~" --include={*.R,*.Rmd}
+  - if [[ $(egrep -R "\"~" --include={*.R,*.Rmd}) ]]; then echo "Local file created"; exit 1; fi
+  - # Do a CRAN build
+  - cd scripts; ./build_cran
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
