build_cran is run verbosely

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
   - # No local files created
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then if [[ $(egrep -R "\"~" --include={*.R,*.Rmd}) ]]; then echo "Local file created"; exit 1; fi; fi
   - # Do a CRAN build
-  - cd scripts; ./build_cran
+  - cd scripts; sh - x build_cran
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
