--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(get_beast2_pkg_names)
 export(get_mrc_path)
 export(get_mrc_paths)
 export(install_beast2_pkg)
+export(is_beast2_pkg_installed)
 export(mrc_install)
 export(mrc_is_installed)
 export(mrc_list)
