--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,5 +24,5 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: https://github.com/richelbilderbeek/mauricer
-BugReports: https://github.com/richelbilderbeek/mauricer/issues
+URL: https://github.com/ropensci/mauricer
+BugReports: https://github.com/ropensci/mauricer/issues
