--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,11 +22,11 @@ environment:
     USE_RTOOLS: true
 
 build_script:
-  - travis-tool.sh install_github richelbilderbeek/beastier
+  - travis-tool.sh install_github ropensci/beastier
   - travis-tool.sh install_deps
   - R -e "library(beastier); beastier::install_beast2()"
-  - travis-tool.sh install_github richelbilderbeek/tracerer
-  - travis-tool.sh install_github richelbilderbeek/beautier
+  - travis-tool.sh install_github ropensci/tracerer
+  - travis-tool.sh install_github ropensci/beautier
   - travis-tool.sh install_github jimhester/covr
   - travis-tool.sh install_github jimhester/lintr
   - travis-tool.sh install_github MangoTheCat/goodpractice
