--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ r_packages:
 r_github_packages:
   - jimhester/covr
   - jimhester/lintr
-  - richelbilderbeek/beastier
+  - ropensci/beastier
   - MangoTheCat/goodpractice
   - KlausVigo/phangorn
   - ropensci/spelling
