--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,14 @@ r_github_packages:
 
 before_script:
   - # Java
-  - # if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew cask install java; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then R CMD javareconf; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then R --quiet -e 'install.packages("rJava", type="source", repos="http://cran.us.r-project.org")'; fi
   - # Java 8
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq oracle-java8-installer; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install oracle-java8-set-default; fi
+  - # OpenMP, from https://github.com/Rdatatable/data.table/wiki/Installation#openmp-enabled-compiler-for-mac
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then xcode-select --install; fi
+  - # BEAST2
   - Rscript -e "beastier::install_beast2()"
   - if [ -f ".lintr" ]; then echo "Do use Hadley Wickham's style guide"; exit 1; fi
   # proselint
