--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: mauricer
 Type: Package
-Title: Install BEAST2 packages from R
+Title: Install BEAST2 packages
 Version: 2.0
 Author: Richel J.C. Bilderbeek
 Maintainer: Richel J.C. Bilderbeek <richel@richelbilderbeek.nl>
 Description: 'BEAST2' (<http://www.beast2.org>) is a widely used
-  Bayesian phylogenetic tool, that uses DNA/RNA/protein data
-  and many model priors to create a posterior of jointly estimated 
-  phylogenies and parameters.
-  'BEAST2' is commonly accompanied by 'BEAUti 2' (<http://www.beast2.org>),
-  which, among others, allows one to install BEAST2 package. 
-  The mauricer package allows to install BEAST2 packages from R.
-License: GPL-3 | file LICENSE
+    Bayesian phylogenetic tool, that uses DNA/RNA/protein data
+    and many model priors to create a posterior of jointly estimated 
+    phylogenies and parameters.
+    'BEAST2' is commonly accompanied by 'BEAUti 2' (<http://www.beast2.org>),
+    which, among others, allows one to install 'BEAST2' package. 
+    The mauricer package allows to install 'BEAST2' packages from 'R'.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
