--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: mauricer
 Type: Package
 Title: Install BEAST2 packages
-Version: 2.0
-Author: Richel J.C. Bilderbeek
-Maintainer: Richel J.C. Bilderbeek <richel@richelbilderbeek.nl>
+Version: 2.0.1
+Author: Richèl J.C. Bilderbeek
+Maintainer: Richèl J.C. Bilderbeek <richel@richelbilderbeek.nl>
 Description: 'BEAST2' (<http://www.beast2.org>) is a widely used
     Bayesian phylogenetic tool, that uses DNA/RNA/protein data
     and many model priors to create a posterior of jointly estimated 
