--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,10 @@ before_script:
   - sudo pip install proselint
 
 after_success:
-  - Rscript -e 'lintr::lint_package()'
-  - Rscript -e 'covr::codecov()'
-  - travis_wait 20 Rscript -e 'goodpractice::gp()'
+  - Rscript -e 'vignette(package = "mauricer")'
+  - Rscript -e "lintr::lint_package()"
+  - Rscript -e "covr::codecov()"
+  - travis_wait 20 Rscript -e "goodpractice::gp()"
   - proselint *.md | egrep -v "typography\.symbols\.curly_quotes"
   - # No local files created
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then if [[ $(egrep -R "\"~" --include={*.R,*.Rmd}) ]]; then echo "Local file created"; exit 1; fi; fi
