--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ r_packages:
   - hunspell
   - xml2
 
-r_binary_packages:
-  - phangorn
+# r_binary_packages:
+#   - phangorn
 
 r_github_packages:
   - jimhester/covr
