--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,14 @@ r_github_packages:
   - ropensci/spelling
 
 before_script:
-  - # if Linux, show distro
+  # if Linux, show distro
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cat /proc/version; fi
-  - # Java
+  # Java
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then R CMD javareconf; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then R --quiet -e 'install.packages("rJava", type="source", repos="http://cran.us.r-project.org")'; fi
-  - # BEAST2
-  - Rscript -e "beastier::install_beast2()"
+  # BEAST2. mauricer must work with and without BEAST2 installed
+  - # Rscript -e "beastier::install_beast2()"
+  # lintr
   - if [ -f ".lintr" ]; then echo "Do use Hadley Wickham's style guide"; exit 1; fi
   # proselint
   - sudo pip install proselint
