--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ r_github_packages:
   - jimhester/lintr
   - MangoTheCat/goodpractice
   - ropensci/spelling
+  - ropensci/beastier@develop
 
 before_script:
   # if Linux, show distro
