--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ r_github_packages:
   - jimhester/lintr
   - MangoTheCat/goodpractice
   - ropensci/spelling
-  - ropensci/beastier@develop
+  - ropensci/beastier
 
 before_script:
   # if Linux, show distro
