--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(get_beast2_pkg_names)
 export(get_mrc_path)
 export(get_mrc_paths)
+export(has_internet)
 export(install_beast2_pkg)
 export(is_beast2_pkg_installed)
 export(uninstall_beast2_pkg)
