--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(get_mrc_path)
 export(get_mrc_paths)
 export(has_internet)
 export(install_beast2_pkg)
+export(is_beast2_ns_pkg_installed)
 export(is_beast2_pkg_installed)
 export(uninstall_beast2_pkg)
