--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
+  - ropensci/beautier
+  - ropensci/tracerer
+  - ropensci/beastier
   - ropensci/spelling
   - ropensci/beastier
 
