Use beastier v2.0.22 on develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ r_github_packages:
   - MangoTheCat/goodpractice
   - ropensci/beautier
   - ropensci/tracerer
-  - ropensci/beastier
+  - ropensci/beastier@develop
   - ropensci/spelling
   - ropensci/beastier
 
