--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
-  - ropensci/beautier
+  - ropensci/beautier@develop
   - ropensci/tracerer
   - ropensci/beastier
   - ropensci/spelling
