Use beastier's develop branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,8 @@ r_github_packages:
   - MangoTheCat/goodpractice
   - ropensci/beautier@develop
   - ropensci/tracerer
-  - ropensci/beastier
+  - ropensci/beastier@develop
   - ropensci/spelling
-  - ropensci/beastier
 
 before_script:
   # if Linux, show distro
