--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
-  - ropensci/beautier@develop
+  - ropensci/beautier
   - ropensci/tracerer
-  - ropensci/beastier@develop
+  - ropensci/beastier
   - ropensci/spelling
 
 before_script:
