Use 'Depends: beastier' in DESCRIPTION, instead of loading it in .onLoad, thanks to a tip from Uwe Ligges. Thanks Uwe!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Depends: beastier
 Imports:
     beastier (>= 2.0.25),
     stringr
