--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Depends: beastier
+Depends: 
+    beastier (>= 2.0.25)
 Imports:
-    beastier (>= 2.0.25),
     stringr
 Suggests:
     beautier,
