--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(install_beast2_pkg)
 export(is_beast2_ns_pkg_installed)
 export(is_beast2_pkg_installed)
 export(uninstall_beast2_pkg)
+import(beastier)
