--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,11 @@ r_github_packages:
   - jimhester/covr
   - jimhester/lintr
   - MangoTheCat/goodpractice
-  - ropensci/beautier
-  - ropensci/tracerer
-  - ropensci/beastier
   - ropensci/spelling
+  # Do a CRAN build, depending on only CRAN packages
+  #- ropensci/beautier
+  #- ropensci/tracerer
+  #- ropensci/beastier
 
 before_script:
   # if Linux, show distro
