--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Depends: 
-    beastier (>= 2.0.25)
+    beastier
 Imports:
     stringr
 Suggests:
