--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Depends: 
+    beastier
 Imports:
-    beastier,
     stringr
 Suggests: 
     testit,
