--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,4 +29,4 @@ Suggests:
 VignetteBuilder: knitr
 URL: https://github.com/ropensci/mauricer
 BugReports: https://github.com/ropensci/mauricer/issues
-SystemRequirements: BEAST2 (http://www.beast2.org/)
+SystemRequirements: BEAST2 (https://www.beast2.org/)
