--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,11 @@ Title: Install 'BEAST2' Packages
 Version: 2.0.6
 Author: Richèl J.C. Bilderbeek
 Maintainer: Richèl J.C. Bilderbeek <richel@richelbilderbeek.nl>
-Description: 'BEAST2' (<http://www.beast2.org>) is a widely used
+Description: 'BEAST2' (<https://www.beast2.org>) is a widely used
     Bayesian phylogenetic tool, that uses DNA/RNA/protein data
     and many model priors to create a posterior of jointly estimated 
     phylogenies and parameters.
-    'BEAST2' is commonly accompanied by 'BEAUti 2' (<http://www.beast2.org>),
+    'BEAST2' is commonly accompanied by 'BEAUti 2' (<https://www.beast2.org>),
     which, among others, allows one to install 'BEAST2' package. 
     This package allows to install 'BEAST2' packages from 'R'.
 License: GPL-3
