--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ matrix:
   include:
   - r: release
     os: linux
+    env: INSTALL_BEAST2=true
   - r: devel
     os: linux
-  #- r: release
-  #  os: osx
+    env: INSTALL_BEAST2=false
 
 r_packages:
   - tracerer
@@ -32,8 +32,8 @@ before_script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo tlmgr install inconsolata; fi
   # Lapack
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install liblapack-dev; fi
-  # BEAST2. mauricer must work with and without BEAST2 installed
-  - Rscript -e "beastier::install_beast2()"
+  # Install BEAST2. Note: beastier must work without BEAST2 installed as well
+  - if [[ "$INSTALL_BEAST2" == true ]]; then Rscript -e "beastier::install_beast2()"; fi
   # Do not install BEAST2 NS package, won't work anyways
   # - Rscript -e "source(\"R/install_beast2_pkg.R\"); source(\"R/is_beast2_pkg_installed.R\"); source(\"R/get_beast2_pkg_names.R\"); install_beast2_pkg(\"NS\")"
   # lintr
@@ -42,14 +42,14 @@ before_script:
   - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then sudo pip install proselint; fi
 
 after_success:
-  # Lint
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_R_VERSION_STRING" == "release" ]; then Rscript -e 'lintr::lint_package()'; fi
   # Codecov
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_R_VERSION_STRING" == "devel" ]; then travis_wait 20 Rscript -e 'covr::codecov()'; fi
-  # Proselint
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_R_VERSION_STRING" == "release" ]; then proselint *.md | egrep -v "typography\.symbols\.curly_quotes"; fi
+  - if [[ "$INSTALL_BEAST2" == true ]]; then travis_wait 20 Rscript -e 'covr::codecov()'; fi
   # Goodpractice
-  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$TRAVIS_R_VERSION_STRING" == "release" ]; then travis_wait 60 Rscript -e 'goodpractice::gp()'; fi
+  - if [[ "$INSTALL_BEAST2" == true ]]; then travis_wait 60 Rscript -e 'goodpractice::gp()'; fi
+  # Lintr
+  - if [[ "$INSTALL_BEAST2" == false ]]; then Rscript -e 'lintr::lint_package()'; fi
+  # Proselint
+  - if [[ "$INSTALL_BEAST2" == false ]]; then proselint *.md | egrep -v "typography\.symbols\.curly_quotes"; fi
   # No local files created
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then if [[ $(egrep -R "\"~" --include={*.R,*.Rmd}) ]]; then echo "Local file created"; exit 1; fi; fi
   - # Do a CRAN build
