--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -36,6 +36,9 @@ jobs:
           remotes::install_cran("covr")
           remotes::install_cran("lintr")
           remotes::install_github("MangoTheCat/goodpractice")
+          remotes::install_github("ropensci/beastier")
+          remotes::install_github("ropensci/tracerer")
+          remotes::install_github("ropensci/beautier")
         shell: Rscript {0}
 
       - name: Show BEAST2
