--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,12 +41,13 @@ jobs:
           remotes::install_github("ropensci/beautier")
           remotes::install_github("ropensci/tracerer")
           remotes::install_github("ropensci/beastier")
+          remotes::install_github("richelbilderbeek/beastierinstall")
         shell: Rscript {0}
 
       - name: Install BEAST2
         env:
           INSTALL_BEAST2: ${{ matrix.install_beast2 }}
-        run: if [[ "$INSTALL_BEAST2" == true ]]; then Rscript -e "beastier::install_beast2()"; fi
+        run: if [[ "$INSTALL_BEAST2" == true ]]; then Rscript -e "beastierinstall::install_beast2()"; fi
 
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
