--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,12 +42,18 @@ jobs:
           remotes::install_github("ropensci/tracerer")
           remotes::install_github("ropensci/beastier")
           remotes::install_github("richelbilderbeek/beastierinstall")
+          remotes::install_github("richelbilderbeek/mauricerinstall")
         shell: Rscript {0}
 
       - name: Install BEAST2
         env:
           INSTALL_BEAST2: ${{ matrix.install_beast2 }}
         run: if [[ "$INSTALL_BEAST2" == true ]]; then Rscript -e "beastierinstall::install_beast2()"; fi
+
+      - name: Install BEAST2 NS package
+        env:
+          INSTALL_BEAST2: ${{ matrix.install_beast2 }}
+        run: if [[ "$INSTALL_BEAST2" == true ]]; then Rscript -e 'mauricerinstall::install_beast2_pkg("NS")'; fi
 
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
