--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mauricer
 Type: Package
-Title: Install 'BEAST2' Packages
+Title: Work with 'BEAST2' Packages
 Version: 2.5
 Author: Richèl J.C. Bilderbeek
 Maintainer: Richèl J.C. Bilderbeek <richel@richelbilderbeek.nl>
@@ -10,7 +10,7 @@ Description: 'BEAST2' (<https://www.beast2.org>) is a widely used
     phylogenies and parameters.
     'BEAST2' is commonly accompanied by 'BEAUti 2' (<https://www.beast2.org>),
     which, among others, allows one to install 'BEAST2' package. 
-    This package allows to install 'BEAST2' packages from 'R'.
+    This package allows to work with 'BEAST2' packages from 'R'.
 License: GPL-3
 Encoding: UTF-8
 RoxygenNote: 7.1.1
