--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,6 +38,7 @@ jobs:
           remotes::install_cran("covr")
           remotes::install_cran("lintr")
           remotes::install_github("MangoTheCat/goodpractice")
+          remotes::install_github("ropensci/beautier")
           remotes::install_github("ropensci/tracerer")
           remotes::install_github("ropensci/beastier")
           remotes::install_github("richelbilderbeek/beastierinstall")
