--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -24,6 +24,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v1
 
+      - uses: r-lib/actions/setup-pandoc@v1
+
       - name: Install libcurl4-openssl-dev
         run: sudo apt install -qq libcurl4-openssl-dev
 
