--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -36,13 +36,13 @@ jobs:
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
-          remotes::install_github("ropensci/beautier")
+          remotes::install_github("ropensci/beautier", ref = "develop")
+          remotes::install_github("ropensci/beastier", ref = "develop")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
           remotes::install_cran("covr")
           remotes::install_cran("lintr")
           remotes::install_github("MangoTheCat/goodpractice")
-          remotes::install_github("ropensci/beastier")
           remotes::install_github("richelbilderbeek/beastierinstall")
           remotes::install_github("richelbilderbeek/mauricerinstall")
         shell: Rscript {0}
