--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -62,15 +62,15 @@ jobs:
         shell: Rscript {0}
 
       - name: Make sure that no files are created in the beautier .cache folder
-        run: testthat::expect_equal(0, length(list.files(rappdirs::user_cache_dir(appname = "beautier"))))
+        run: testthat::expect_length(list.files(rappdirs::user_cache_dir(appname = "beautier")), 0)
         shell: Rscript {0}
 
       - name: Make sure that no files are created in the tracerer .cache folder
-        run: testthat::expect_equal(0, length(list.files(rappdirs::user_cache_dir(appname = "tracerer"))))
+        run: testthat::expect_length(list.files(rappdirs::user_cache_dir(appname = "tracerer")), 0)
         shell: Rscript {0}
 
       - name: Make sure that no files are created in the beastier .cache folder
-        run: testthat::expect_equal(0, length(list.files(rappdirs::user_cache_dir(appname = "beastier"))))
+        run: testthat::expect_length(list.files(rappdirs::user_cache_dir(appname = "beastier")), 0)
         shell: Rscript {0}
 
       - name: Test coverage
