Ignore CI scripts in R build

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -10,5 +10,8 @@
 ^CODE_OF_CONDUCT.md$
 ^CONTRIBUTING.md$
 ^Singularity$
-build_cran.sh
-
+^build_cran.sh$
+^\.markdownlint\.jsonc$
+^\.markdownlintignore$
+^\.spellcheck\.yml$
+^\.wordlist\.txt$
